@@ -1,9 +1,9 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 3.9
+Version: 4.0
 Requires at least: 3.7
-Tested up to: 4.4
+Tested up to: 4.5
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, dark, gray, editor-style, translation-ready
