@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 3.9
+Version: 4.0
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
@@ -76,12 +76,12 @@ body {background:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; col
 
 
 /* HEADINGS */
-h1 {font-size:3.0em; line-height:1.2em;}
-h2 {font-size:2.5em; line-height:1.2em;}
-h3 {font-size:2.0em; line-height:1.5em;}
-h4 {font-size:1.5em; line-height:1.5em;}
-h5 {font-size:1.0em; line-height:2em;}
-h6 {font-size:0.75em; line-height:2em;}
+h1 {font-size:2.25em; line-height:1.5em;}
+h2 {font-size:2.0em; line-height:2em;}
+h3 {font-size:1.75em; line-height:2em;}
+h4 {font-size:1.5em; line-height:2em;}
+h5 {font-size:1.25em; line-height:2.5em;}
+h6 {font-size:1.0em; line-height:2.5em;}
 
 
 /* LINKS AND HTML TAGS */
@@ -98,7 +98,7 @@ cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
-address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #ddd;}
+address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
 p {margin:0 0 10px;}
 
 
@@ -130,8 +130,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 /* HEADER LOGO */
 #header .logo {width:100%; text-align:center; padding:0 0 20px;}
-#header .logo h1 {font-size:2em;}
-#header .logo h2 {padding:5px 0; font-size:1.2em;}
+#header .logo h2 {padding:5px 0; font-size:1.25em; line-height:1.5em;}
 #header .logo img {padding:10px 0 0;}
 
 
@@ -159,14 +158,14 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 10px; font-size:1.5em; line-height:1.5em;}
-.page-title-post {clear:both; font-size:1.5em; line-height:1.5em;}
+.page-title {clear:both; padding:0 0 10px; line-height:1.5em;}
+.page-title-post {clear:both; line-height:1.5em;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
-.post-title {clear:both; font-size:1.5em; line-height:1.5em;}
+.post-title {clear:both; line-height:1.5em;}
 .sticky {clear:both; display:block; text-align:center; margin:0 0 10px; padding:5px; color:#e77776; border-top:1px solid #444; border-bottom:1px solid #444;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
 .more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
@@ -239,7 +238,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:100%; float:left;}
 .widget {padding:10px 0; margin:0 0 10px; background:none;}
-.widgettitle, .nav-widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444; font-size:1.5em;}
+.widgettitle, .nav-widgettitle {color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444; font-size:1.5em; line-height:1.5em;}
 
 
 /* CALENDAR WIDGET */
@@ -286,7 +285,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#header {width:100%; padding:0; background:none;}
 	#header .logo {padding:10px 0;}
 	#header .logo h1 {font-size:2em;}
-	#header .logo h2 {padding:0; font-size:1.3em;}
+	#header .logo h2 {padding:0; font-size:1.5em;}
 	#header-image {display:none;}
 	#header-image-mobile {display:block; width:100%; float:left; background:none;}
 	#header-image-mobile .header-img {width:100%; height:auto;}
@@ -300,7 +299,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.postmetadata {margin:10px 0;}
 
 	/* HEADINGS */
-	.post-title, .page-title, .page-title-post, .widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.3em;}
+	.post-title, .page-title, .page-title-post {font-size:1.75em;}
+	.widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.5em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
