@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+DarkElements version 4.0 - april 2016
+- resized all headings (thanks Tom)
+- changed address tag display
+- several small adjustments
+
 DarkElements version 3.9 - march 2016
 - localized mobile menu
 - mobile menu now supports 2 level subpages
